test/error/sema/duplicate-fn-def.dsk
func f(x: int) -> void
    return
end

func f(y: int) -> void
    return
end
